ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: perlcicd-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - bbs.tpk.best
    secretName: tls-secret
  rules:
  - host: bbs.tpk.best
    http:
      paths:
      - backend:
          serviceName: perlcicd
          servicePort: 80
        path: /(.*)
